feat: add check client nip exists endpoint
